--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=7.1.0",
     "numpy>=2.3.5",
+    "pandas>=2.3.3",
     "ruff>=0.14.8",
     "tqdm>=4.67.1",
 ]
