--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=7.1.0",
     "numpy>=2.3.5",
+    "ortools>=9.14.6206",
     "pandas>=2.3.3",
     "ruff>=0.14.8",
     "scipy>=1.16.3",
